cmake_minimum_required(VERSION 3.20)
project(aoc_21)

set(CMAKE_CXX_STANDARD 17)

add_executable(day_01 01.cpp)
add_executable(day_02 02.cpp)
add_executable(day_03 03.cpp)
add_executable(day_04 04.cpp)
add_executable(day_05 05.cpp)
add_executable(day_06 06.cpp)
add_executable(day_07 07.cpp)
add_executable(day_08 08.cpp)
add_executable(day_09 09.cpp)
add_executable(day_10 10.cpp)
add_executable(day_11 11.cpp)
add_executable(day_12 12.cpp)
add_executable(day_13 13.cpp)
